Bug 1899580 - Exclude collapsed vertical tabs from indicator-replaces-favicon behavior. r=sidebar-reviewers,desktop-theme-reviewers,tabbrowser-reviewers,dao,sessionstore-reviewers,sclements
- Ensure everything that sets .expanded on sidebar-main uses the toggleExpanded method

Differential Revision: https://phabricator.services.mozilla.com/D217507

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -255,7 +255,11 @@
   height: 16px;
   width: 16px;
 
-  &:not([pinned]) {
+  /* apply end margin to not-pinned tabs which are:
+     - oriented horizontally, or
+     - vertical but expanded
+  */
+  #tabbrowser-tabs:is(:not([orient="vertical"]), [orient="vertical"][expanded]) &:not([pinned]) {
     margin-inline-end: 5.5px;
   }
 }
@@ -542,7 +546,7 @@
   margin: -.3em 0 .3em; /* adjust margins to compensate for line-height of .tab-label */
   opacity: .8;
 
-  #tabbrowser-tabs[secondarytext-unsupported] &,
+  #tabbrowser-tabs:is([secondarytext-unsupported], [orient="vertical"]) &,
   :root[uidensity=compact] &,
   &:not([soundplaying], [muted], [activemedia-blocked], [pictureinpicture]),
   &:not([activemedia-blocked]) > .tab-icon-sound-blocked-label,
